<resources>
    <string name="app_name">Math Flash Crash Test Dummy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_answer">Answer</string>
    <string name="text_message">Nothing to see here</string>
    <string name="stringPlus">Addition</string>
    <string name="stringMinus">Subtraction</string>
    <string name="stringDivision">Division</string>
    <string name="stringMultiple">Multiple selection</string>
    <string name="stringMultiplication">Multiplication</string>
    <string name="menu_user_default">Default</string>
    <string name="menu_user_create">Create user</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_user_email">Email</string>
    <string name="action_cancel">Cancel</string>
    <string name="user_default">Default</string>
    <string name="hello_name">Hello, %1$s!</string>
    <string name="msg_correct">Answer %1$d is correct!</string>
    <string name="msg_incorrect">Answer %1$d is wrong!</string>
    <string name="msg_number_long">%1$d</string>
    <string name="menu_reset_user">Reset user progress</string>
    <string name="descrip_smiling_star">Smiling star</string>
    <string name="hint_top_max">Top max (%1$d)</string>
    <string name="hint_bot_max">Bottom max (%1$d)</string>
    <string name="text_progress">%1$d out of %2$d (%3$.0f%%) - %4$d to go</string>
    <string name="text_progress_done">%1$s! %2$d out of %3$d (%4$.0f%%)</string>
    <string name="text_arithmetic_operations">Arithmetic operations</string>
    <string name="text_top_max">Top maximum</string>
    <string name="text_bot_max">Bottom maximum</string>
    <string name="text_menu_delete_user">Delete user</string>
    <string name="text_menu_modify_user">Modify user</string>
    <string name="title_delete_user">Delete user</string>
    <string name="text_delete_user_prompt">Delete user %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="test_max_num">Number of tests</string>
    <string name="text_bravo">Bravo %1$s!</string>
    <string name="text_num_too_small">Minimum number is %1$d, resetting</string>
    <string name="title_clear_user">Clear user stats</string>
    <string name="text_clear_user_prompt">Do you want to clear user stats for %1$s?</string>
    <string name="menu_users">Users ...</string>
    <string name="menu_about_text">About ...</string>
    <string name="about_app_descrip">Arithmetic flash cards testing</string>
    <string name="about_app_credits">Author: Steeve McCauley</string>
    <string name="menu_backup_text">Backup ...</string>
    <string name="menu_restore_text">Restore ...</string>
    <string name="menu_user_actions_text">User actions</string>
    <string name="menu_show_user_stats_text">Show stats ...</string>
    <string name="menu_clear_user">Clear user stats ...</string>
    <string name="msg_refusing_to_delete_default_user">Refusing to delete default user</string>
    <string name="msg_failed_to_delete_current_user">Failed to delete current user %1$s</string>
    <string name="msg_successfully_restored_user">Successfully restored settings from %1$s</string>
    <string name="err_create_backup_directory">Failed to create backup directory %1$s</string>
    <string name="msg_created_backup_directory">Created backup directory %1$s</string>
    <string name="msg_successfully_backed_up_json">Successfullly backed up user data %1$s</string>
    <string name="err_backup_directory_not_found">Backup directory not found %1$s</string>
    <string name="err_no_email_clients_installed">Email application not found</string>
    <string name="err_user_not_found">User not found %1$s</string>
    <string name="activity_stats_date">Date</string>
    <string name="activity_stats_op">Op</string>
    <string name="activity_stats_correct">Correct</string>
    <string name="activity_stats_num">Num</string>
    <string name="activity_stats_percent">Percent</string>
    <string name="activity_stats_rate">Rate</string>
    <string name="msg_user_progress_reset">User progress reset %1$s</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_backspace"><![CDATA[<<]]></string>
    <string name="_0">0</string>
    <string name="title_select_operation">Test not done for user %1$s</string>
    <string name="msg_select_operation">Do you want to erase the current result and continue?</string>
    <string name="menu_quit">Quit</string>
    <string name="msg_failed_backup_stats">Failed to backup user statistics</string>
    <string name="msg_failed_restore_stats">Failed to restore user statistics</string>
</resources>
