<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_reset_user"
        android:title="@string/menu_reset_user"/>
    <item
        android:id="@+id/menu_create_user"
        android:title="@string/menu_user_create"/>
    <item
        android:id="@+id/menu_modify_user"
        android:enabled="true"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/text_menu_modify_user"
        android:visible="true"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/menu_delete_user"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/text_menu_delete_user"/>
    <item
        android:id="@+id/menu_popup_users"
        android:icon="@drawable/yoshi_star"
        android:title="@string/menu_users"
        app:showAsAction="ifRoom"/>
</menu>