<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/keyboard_grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4"
            android:padding="8sp"
            android:background="@android:color/holo_orange_light"
    >

    <Button
        android:id="@+id/number1"
        android:text="@string/_1"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:padding="4sp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/number2"
        android:text="@string/_2"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/number3"
        android:text="@string/_3"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/number4"
        android:text="@string/_4"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/number5"
        android:text="@string/_5"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/number6"
        android:text="@string/_6"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/number7"
        android:text="@string/_7"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/number8"
        android:text="@string/_8"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/number9"
        android:text="@string/_9"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/space"
        android:text=""
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/number0"
        android:text="@string/_0"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <Button
        android:id="@+id/backspace"
        android:text="@string/_backspace"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />


</GridLayout>