<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oneguycoding.mathflashcrashtestdummy.StatsActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/statsScroll"
                style="@android:style/Widget.Material.Light.ScrollView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/statsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:id="@+id/statsRowHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#607D8B"
                >

                <TextView
                    android:id="@+id/statsRowHeaderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_stats_date"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/statsRowHeaderOperation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_stats_op"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:id="@+id/statsRowHeaderCorrect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_stats_correct"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:id="@+id/statsRowHeaderNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_stats_num"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:id="@+id/statsRowHeaderPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_stats_percent"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:id="@+id/statsRowHeaderRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_stats_rate"
                    android:textAlignment="textEnd"/>
            </TableRow>

        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
