<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oneguycoding.mathflashcrashtestdummy.OperationSelector">

    <CheckBox
        android:id="@+id/checkMultiple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/stringMultiple"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/checkPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stringPlus"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/checkMultiple"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/checkMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stringMinus"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkPlus"
        android:onClick="onCheckboxClicked"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <CheckBox
        android:id="@+id/checkMult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stringMultiplication"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/checkMinus"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/checkDivision"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stringDivision"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/checkMult"
        android:onClick="onCheckboxClicked"/>
</android.support.constraint.ConstraintLayout>
