<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oneguycoding.mathflashcrashtestdummy.CreateUserActivity">

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_user_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_user_email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_name"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.504"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <EditText
        android:id="@+id/numTopMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/hint_top_max"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"/>

    <EditText
        android:id="@+id/numBotMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/hint_bot_max"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/numTopMax"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none|text"
        android:singleLine="true"
        android:text="Arithmetic operations"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_email"
        app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>
